--- a/src/gc-user/gc-user-managed-accounts-external-account-info-behavior.html
+++ b/src/gc-user/gc-user-managed-accounts-external-account-info-behavior.html
@@ -12,9 +12,15 @@
       country: {
         type: String
       },
+      _availableCurrencies: {
+        type: Array,
+        computed: '_computeAvailableCurrencies(country)',
+        observer: '_availableCurrenciesChanged'
+      },
       _data: {
         type: Object,
-        value: {}
+        value: {},
+        notify: true
       }
     },
     _computeTokenRequest: function() {
@@ -26,7 +32,39 @@
         result[`bank_account[${key}]`] = this._data[key];
       });
       return result;
+    },
+    _computeAvailableCurrencies: function(country) {
+      return currenciesMap[country];
+    },
+    _availableCurrenciesChanged: function(currencies) {
+      this.set('_data.currency', currencies[0]);
     }
+  };
+
+  var currenciesMap = {
+    'AU': ['AUD'],
+    'CA': ['CAD', 'USD'],
+    'JP': ['JPY'],
+    'SG': ['SGD'],
+    'US': ['USD'],
+    'HK': ['HKD'],
+    'NZ': ['NZD'],
+    'FI': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'FR': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'IE': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'NO': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'DK': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'SE': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'GB': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'ES': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'AT': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'BE': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'DE': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'IT': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'LU': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'NL': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'PT': ['EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK'],
+    'CH': ['CHF', 'EUR', 'GBP', 'USD', 'DKK', 'NOK', 'SEK']
   };
 }());
 </script>
