--- a/src/gc-user/gc-user-managed-accounts-external-account-info-eu.html
+++ b/src/gc-user/gc-user-managed-accounts-external-account-info-eu.html
@@ -7,6 +7,19 @@
   <template>
     <style include="shared-styles"></style>
     <div class="layout horizontal">
+      <paper-dropdown-menu class="flex"
+        label="Currency"
+        required
+        auto-validate
+        error-message="Currency is required.">
+        <paper-listbox class="dropdown-content" selected="{{_data.currency}}" attr-for-selected="value">
+          <template is="dom-repeat" items="[[_availableCurrencies]]">
+            <paper-item value="[[item]]">[[item]]</paper-item>
+          </template>
+        </paper-listbox>
+      </paper-dropdown-menu>
+    </div>
+    <div class="layout horizontal">
       <paper-input class="flex" value="{{_data.account_number}}" label="IBAN" required auto-validate error-message="IBAN is required."></paper-input>
     </div>
   </template>
