Fixed ireland flag

--- a/src/gc-landing-page/gc-landing-page.html
+++ b/src/gc-landing-page/gc-landing-page.html
@@ -339,7 +339,7 @@
               code: 'hk'
             }, {
               name: 'Ireland',
-              code: 'ir'
+              code: 'ie'
             }, {
               name: 'Italy',
               code: 'it'
